test/files/pos/t3946/Test_1.scala
package q {
  class B extends p.A {
    override protected def f() { }
  }
}
