test/files/neg/t10662/pqx_1.scala

package p.q

class X {
  override def toString() = "p.q.X"
}
